<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Compute for Cancer</string>
    <string name="generic_loading">Loading! Please wait&#8230;</string>
    <string name="generic_button_continue">Continue</string>
    <string name="generic_button_finish">Finish</string>
    <string name="attachproject_list_desc">Select scientific projects you want to contribute to:</string>
    <string name="attachproject_list_header">Choose a project</string>
    <string name="attachproject_list_manual_button">Add project by URL</string>
    <string name="attachproject_list_manual_dialog_title">Enter project URL:</string>
    <string name="attachproject_list_manual_dialog_button">Add project</string>
    <string name="attachproject_list_manual_no_url">Please enter project URL</string>
    <string name="attachproject_list_acctmgr_button">Add account manager</string>
    <string name="attachproject_list_no_internet">No Internet connection</string>
    <string name="attachproject_credential_input_sing_desc">Enter account information</string>
    <string name="attachproject_credential_input_desc">Enter account information for selected projects:</string>
    <string name="attachproject_credential_input_show_pwd">Show password</string>
    <string name="attachproject_individual_credential_input">Attach projects individually</string>
    <string name="attachproject_conflicts_desc">There have been problems attaching scientific project</string>
    <string name="attachproject_conflict_undefined">Could not connect</string>
    <string name="attachproject_conflict_not_unique">Account exists with different password</string>
    <string name="attachproject_conflict_bad_password">Password incorrect</string>
    <string name="attachproject_conflict_unknown_user">Account does not exist</string>
    <string name="attachproject_conflict_unknown_user_creation_disabled">Account does not exist, visit project website to register</string>
    <string name="attachproject_working_attaching">Attaching</string>
    <string name="attachproject_hints_header">Hint</string>
    <string name="attachproject_hint_contribtion_header">How to contribute:</string>
    <string name="attachproject_hint_contribtion_wifi">1. Connect to WiFi</string>
    <string name="attachproject_hint_contribtion_charger">2. Plug in Charger</string>
    <string name="attachproject_hint_contribtion_screen">3. Turn off Screen</string>
    <string name="attachproject_hint_projectwebsite_header">Visit project websites to:</string>
    <string name="attachproject_hint_projectwebsite_science">Learn more about the science</string>
    <string name="attachproject_hint_projectwebsite_stats">View contribution statistics</string>
    <string name="attachproject_hint_projectwebsite_community">Get in touch with other volunteers</string>
    <string name="attachproject_hint_platforms_header">BOINC is also available for your computer or laptop, visit boinc.berkeley.edu to learn more.</string>
    <string name="attachproject_login_loading">Contacting project server&#8230;</string>
    <string name="attachproject_login_image_description">Project logo.</string>
    <string name="attachproject_login_header_general_area">General area:</string>
    <string name="attachproject_login_header_specific_area">Specific area:</string>
    <string name="attachproject_login_header_description">Description:</string>
    <string name="attachproject_login_header_home">Home:</string>
    <string name="attachproject_login_header_url">Website:</string>
    <string name="attachproject_login_header_platform">Android:</string>
    <string name="attachproject_login_platform_supported">Device type is supported by this project</string>
    <string name="attachproject_login_platform_not_supported">Device is not supported by this project</string>
    <string name="attachproject_login_category_terms_of_use">Terms of use for</string>
    <string name="attachproject_login_accept_terms_of_use">By creating an account with this project, you accept the terms of use as shown above.</string>
    <string name="attachproject_login_category_login">Sign in with existing account</string>
    <string name="attachproject_login_header_id_email">eMail:</string>
    <string name="attachproject_login_header_id_name">Name:</string>
    <string name="attachproject_login_header_pwd">Password:</string>
    <string name="attachproject_login_category_creation">New to </string>
    <string name="attachproject_login_header_creation_enabled">Register an account to participate:</string>
    <string name="attachproject_login_header_creation_client_disabled">Visit project website to create an account:</string>
    <string name="attachproject_login_header_creation_disabled">This project is not currently accepting new accounts.</string>
    <string name="attachproject_login_button_registration">Register</string>
    <string name="attachproject_login_button_login">Sign in</string>
    <string name="attachproject_login_button_forgotpw">Forgot Password</string>
    <string name="attachproject_login_error_toast">Contacting project failed!</string>
    <string name="attachproject_login_attached">Attached</string>
    <string name="attachproject_registration_header">Account registration for </string>
    <string name="attachproject_registration_header_url">Project:</string>
    <string name="attachproject_registration_header_email">Email Address:</string>
    <string name="attachproject_registration_header_username">Name:</string>
    <string name="attachproject_registration_header_teamname">Team:</string>
    <string name="attachproject_registration_header_pwd">Password:</string>
    <string name="attachproject_registration_header_pwd_confirm">&#8230; Retype:</string>
    <string name="attachproject_registration_button">Create</string>
    <string name="registration_signup_top_text">Please Sign up</string>
    <string name="attachproject_acctmgr_list_desc">Use BOINC account manager to add and manage multiple projects</string>
    <string name="attachproject_acctmgr_header">Add account manager</string>
    <string name="attachproject_acctmgr_header_url">URL</string>
    <string name="attachproject_acctmgr_header_name">User:</string>
    <string name="attachproject_acctmgr_header_pwd">Password:</string>
    <string name="attachproject_acctmgr_header_pwd_confirm">&#8230; Retype:</string>
    <string name="attachproject_acctmgr_button">Add</string>
    <string name="attachproject_error_wrong_name">User not found</string>
    <string name="attachproject_error_short_pwd">Password too short</string>
    <string name="attachproject_error_no_internet">Connection failure</string>
    <string name="attachproject_error_pwd_no_match">Passwords do not match</string>
    <string name="attachproject_error_pwd_no_retype">Please type password again</string>
    <string name="attachproject_error_no_url">Please enter URL</string>
    <string name="attachproject_error_no_email">Please enter eMail address</string>
    <string name="attachproject_error_no_pwd">Please enter a password</string>
    <string name="attachproject_error_no_name">Please enter user name</string>
    <string name="attachproject_error_unknown">failed</string>
    <string name="attachproject_error_bad_username">User name refused</string>
    <string name="attachproject_error_email_in_use">eMail is already in use</string>
    <string name="attachproject_error_project_down">Project is offline</string>
    <string name="attachproject_error_email_bad_syntax">eMail refused</string>
    <string name="attachproject_error_bad_pwd">Password refused</string>
    <string name="attachproject_error_creation_disabled">Account creation is disabled on this project</string>
    <string name="attachproject_error_invalid_url">Invalid URL</string>
    <string name="attachproject_working_back_button">Back</string>
    <string name="attachproject_working_finish_button">Finish</string>
    <string name="attachproject_working_check_desc">Successful</string>
    <string name="attachproject_working_failed_desc">Failed</string>
    <string name="attachproject_working_ongoing">&#8230;</string>
    <string name="attachproject_working_finished">.</string>
    <string name="attachproject_working_description">:</string>
    <string name="attachproject_working_connect">Connect</string>
    <string name="attachproject_working_verify">Verify account</string>
    <string name="attachproject_working_register">Register account</string>
    <string name="attachproject_working_login">Log in</string>
    <string name="attachproject_working_acctmgr">Add account manager</string>
    <string name="attachproject_working_acctmgr_sync">Synchronize</string>
    <string name="main_noproject_warning">Tap here to choose a project.</string>
    <string name="main_error">Whooops</string>
    <string name="main_error_long">&#8230;this should not happen!\nClick on the icon to try again.</string>
    <string name="main_title_icon_desc">BOINC icon</string>
    <string name="tab_status">Status</string>
    <string name="tab_projects">Projects</string>
    <string name="tab_tasks">Tasks</string>
    <string name="tab_transfers">Transfers</string>
    <string name="tab_preferences">Preferences</string>
    <string name="tab_notices">Notices</string>
    <string name="tab_desc">Navigation</string>
    <string name="status_running">Computing</string>
    <string name="status_running_long">Thank you for participating.</string>
    <string name="status_paused">Suspended</string>
    <string name="status_idle">Nothing to do</string>
    <string name="status_idle_long">Waiting for tasks&#8230;</string>
    <string name="status_computing_disabled">Suspended</string>
    <string name="status_computing_disabled_long">Press play to resume network and computation.</string>
    <string name="status_launching">Starting&#8230;</string>
    <string name="status_noproject">Choose a project to participate in.</string>
    <string name="status_closing">Closing&#8230;</string>
    <string name="status_benchmarking">Benchmarking&#8230;</string>
    <string name="status_image_description">project image</string>
    <string name="prefs_notification">Notifications</string>
    <string name="prefs_run_automaticaly">Run Automatically</string>
    <string name="prefs_notification_daily">Daily</string>
    <string name="prefs_notification_weekly">Weekly</string>
    <string name="prefs_notification_monthly">Monthly</string>
    <string name="prefs_automaticaly_bottom_text">Switching this off will turn off autocompute</string>
    <string name="sign_in_top_text">Please sign in</string>
    <string name="sign_in_email_hint">Email Address</string>
    <string name="sign_in_name_hint">Name</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_forgot_text"><u>Forgot password?</u></string>
    <string name="sign_in_btn_text">SIGN IN</string>
    <string name="onboarding_tell_me_more">TELL ME MORE</string>
    <string name="onboarding_setup_title">Stay up to date with your donation</string>
    <string name="onboarding_notify">Recieve notifications about your impact.</string>
    <string name="onboarding_no_thank">NO THANKS</string>
    <string name="hours">HOURS</string>
    <string name="minutes">MINUTES</string>
    <string name="seconds">SECONDS</string>
    <string name="notify_title_text">Compute for Cancer</string>
    <string name="notify_button_share">SHARE</string>
    <string name="notify_button_view">VIEW</string>
    <string name="notify_donations">Most resent donation:</string>
    <string name="notify_total_donation">Total donations over time:</string>
    <string name="tell_me_more_top_text">Ready to join the fight against cancer?</string>
    <string name="tell_me_more_bottom_text">Right now, scientists all over the world are racing to find a cure for cancer.</string>
    <string name="ready_to_help">I\'M READY TO HELP</string>
</resources>