<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/notify_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greyish_brown"
                android:text="@string/notify_title_text"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/greyish_brown"
            android:text="@string/notify_donations"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvSmallCountHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/clear_blue"
                    android:textSize="50sp"
                    android:text="00"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/clear_blue"
                    android:textSize="18sp"
                    android:text="@string/hours"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="50sp"
                android:gravity="top"
                android:textColor="@color/clear_blue"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/tvSmallCountMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/clear_blue"
                    android:textSize="50sp"
                    android:text="00"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/clear_blue"
                    android:textSize="18sp"
                    android:text="@string/minutes"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="50sp"
                android:textColor="@color/clear_blue"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/tvSmallCountSeconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/clear_blue"
                    android:textSize="50sp"
                    android:text="00"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/clear_blue"
                    android:textSize="18sp"
                    android:text="@string/seconds"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/greyish_brown"
            android:text="@string/notify_total_donation"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/clear_blue"
            android:gravity="right">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/notify_button_share"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:background="@color/clear_blue"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:text="@string/notify_button_view"
                android:background="@color/clear_blue"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>