<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:gravity="center"
        android:text="@string/tell_me_more_top_text"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mainlogo"
        android:maxWidth="400dp"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_above="@+id/tmml_ready_b"
        android:text="@string/tell_me_more_bottom_text"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/tmml_ready_b"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/ready_to_help"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_sign_in_transparent_button"/>

</RelativeLayout>