<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_top_text"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/textView" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/sil_email_et"
                    android:inputType="textEmailAddress"
                    android:hint="@string/sign_in_email_hint"
                    android:layout_width="fill_parent"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_editview_bottom_border"
                    android:padding="5dp"/>

                <EditText
                    android:id="@+id/sil_name_et"
                    android:hint="@string/sign_in_name_hint"
                    android:layout_width="fill_parent"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:background="@drawable/shape_editview_bottom_border"
                    android:padding="5dp"/>

                <EditText
                    android:id="@+id/sil_password_et"
                    android:inputType="textPassword"
                    android:hint="@string/sign_in_password_hint"
                    android:layout_width="fill_parent"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_editview_bottom_border"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_forgot_text"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:clickable="true"
                    android:layout_marginTop="10dp"
                    android:gravity="right"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">
                <Button
                    android:id="@+id/sil_sign_in_b"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/sign_button_text_color"
                    android:text="@string/sign_in_btn_text"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_sign_button"
                    android:onClick="continueClicked"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>