<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2012 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ListView
        android:id="@+id/listview"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

    <!-- new design -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_preferences"
            android:textSize="25sp"
            android:layout_marginTop="60dp"
            android:textColor="@color/greyish_brown"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="2">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff=""
                    android:theme="@style/CustomSwitch"
                    android:textOn="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefs_notification"
                    android:textSize="20sp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/clear_blue"
                    android:textStyle="bold"/>

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/checkBtnDaily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefs_notification_daily"
                    app:buttonTint="@color/clear_blue" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/checkBtnWeekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefs_notification_weekly"
                    app:buttonTint="@color/clear_blue" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/checkBtnMonthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefs_notification_monthly"
                    app:buttonTint="@color/clear_blue" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="2">
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switchRun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff=""
                    android:theme="@style/CustomSwitch"
                    android:textOn="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prefs_run_automaticaly"
                    android:textSize="20sp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/clear_blue"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prefs_automaticaly_bottom_text"
                    android:textSize="15sp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/greyish_brown"
                    android:gravity="start"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
