<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/onboarding_setup_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/onboarding_notify"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/noticications_illo"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:paddingRight="20dp">
                    <Button
                        android:id="@+id/btnMore"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_no_thank"
                        android:textColor="@color/white"
                        android:padding="5dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/shape_sign_in_transparent_button"/>
                    <Button
                        android:id="@+id/btnDoit"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_tell_me_more"
                        android:textColor="@color/sign_button_text_color"
                        android:layout_alignParentRight="true"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:padding="5dp"
                        android:background="@drawable/shape_sign_button"/>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center">
        <Button
            android:id="@+id/btnFirst"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/rounded_button_solid_white"/>
        <Button
            android:id="@+id/btnSecond"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/rounded_button_solid_white"/>
        <Button
            android:id="@+id/btnThird"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/rounded_button_solid_white"/>
    </LinearLayout>

</LinearLayout>